--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
                     <div class="input-group actions">
                         <a href="#" onclick="modalMusic.close()" class="button cancel">Voltar</a>
-                        <button type="submit">Enviar <img src="./assets/send.png" alt="enviar"></button>
+                        <button type="submit">Enviar </button>
                     </div>
                 </form>
             </div>
@@ -106,7 +106,7 @@
 
                     <div class="input-group actions">
                         <a href="#" onclick="modalScrap.close()" class="button cancel">Voltar</a>
-                        <button type="submit" onclick="modalScrap.close()">Enviar <img src="./assets/send.png" alt="enviar"></button>
+                        <button type="submit" onclick="modalScrap.close()">Enviar</button>
                     </div>
 
                 </form>
